# einops

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CITATION.cff  CNAME  README TensorFlow.md  README.md  backends.py  einops.py  index.html  layers.py  mkdocs.yml  objects.inv  pyproject.toml  pytorch-examples.html  setup.py  sitemap.xml  test.py  test.sh  test_layers.py  tests.py
.devcontainer/: devcontainer.json  einops.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  extensions--introducing-new-operation---addition-to-notion.md  extensions--introducing-new-operation---improve-notion.md
.github/workflows/: deploy_docs.yml  deploy_to_pypi.yml  run_tests.yml  test_notebooks.yml
1-einops-basics/: index.html
2-einops-for-deep-learning/: index.html
3-einmix-layer/: index.html
4-pack-and-unpack/: index.html
api/asnumpy/: index.html
api/einsum/: index.html
api/pack_unpack/: index.html
api/parse_shape/: index.html
api/rearrange/: index.html
api/reduce/: index.html
api/repeat/: index.html
css/: codehilite.css  mkdocs.css
docs/: 1-einops-basics.ipynb  2-einops-for-deep-learning.ipynb  3-einmix-layer.ipynb  4-einattention.ipynb  4-pack-and-unpack.ipynb  README.md  index.html  index.md  pytorch-examples.html
docs/1-einops-basics/: index.html
docs/2-einops-for-deep-learning/: index.html
docs/3-einmix-layer/: index.html
docs/4-pack-and-unpack/: index.html
docs/api/: asnumpy.md  repeat.md
docs/css/: mkdocs.css
docs/pages/: projects.md  testimonials.md
docs/resources/: test_images.npy
docs/source_examples/: Converter.ipynb  Pytorch.ipynb  converter.py
docs/utils/: __init__.py
docs/utils/__init__/: index.html
docs_src/: 1-einops-basics.ipynb  2-einops-for-deep-learning.ipynb  3-einmix-layer.ipynb  4-pack-and-unpack.ipynb  README.md  docs  pytorch-examples.html
docs_src/api/: einsum.md  pack_unpack.md  parse_shape.md  rearrange.md  reduce.md
docs_src/css/: mkdocs.css
docs_src/pages/: projects.md  testimonials.md
einops/: __init__.py  _backends.py  _jittor_specific.py  _torch_specific.py  array_api.py  backends.py  einattention.py  einops.py  packing.py  parsing.py
einops/experimental/: data_api_packing.py  einsplit.py  indexing.py  packing_demo.ipynb
einops/layers/: __init__.py  _einmix.py  _weighted_einsum.py  chainer.py  flax.py  gluon.py  jittor.py  keras.py  mindspore.py  oneflow.py  paddle.py  tensorflow.py  torch.py
einops/tests/: __init__.py  run_tests.py  test_array_api.py  test_einsum.py  test_examples.py  test_layers.py  test_ops.py  test_other.py  test_packing.py  test_parsing.py
layers/: __init__.py  chainer.py  gluon.py  keras.py  torch.py
pages/projects/: index.html
pages/testimonials/: index.html
scripts/: convert_readme.py  deploy-docs.sh  deploy_to_pypi.sh  requirements-dev.txt  run-docs.sh  setup.py  test_notebooks.py
scripts/pytorch_examples_source/: Pytorch.ipynb  converter.py
search/: search_index.json
tests/: __init__.py  einattention.py  test_einattention.py  test_einsum.py  test_examples.py  test_experimental.py  test_layers.py  test_notebooks.py  test_ops.py  test_other.py  test_packing.py  test_parsing.py
